--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,15 +48,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="Foto 1"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:onClick="tomarFoto1"/>
+                android:scaleType="center"
+                app:srcCompat="@drawable/foto_no_tomada" />
 
             <ImageButton
                 android:id="@+id/btnfoto2"
                 android:layout_width="184dp"
                 android:layout_height="wrap_content"
                 android:contentDescription="Foto 2"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/foto_no_tomada" />
         </LinearLayout>
 
         <LinearLayout
@@ -70,14 +70,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="Foto 3"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/foto_no_tomada" />
 
             <ImageButton
                 android:id="@+id/btnfoto4"
                 android:layout_width="184dp"
                 android:layout_height="wrap_content"
                 android:contentDescription="Foto 4"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/foto_no_tomada" />
         </LinearLayout>
 
         <LinearLayout
@@ -91,14 +91,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="Foto 5"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/foto_no_tomada" />
 
             <ImageButton
                 android:id="@+id/btnfoto6"
                 android:layout_width="184dp"
                 android:layout_height="wrap_content"
                 android:contentDescription="Foto 6"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/foto_no_tomada" />
         </LinearLayout>
 
         <RadioGroup
