--- a/app/src/main/res/layout/dlg_tomar_foto.xml
+++ b/app/src/main/res/layout/dlg_tomar_foto.xml
@@ -8,10 +8,12 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/previsualizacionImgSuculenta"
         android:layout_width="match_parent"
         android:layout_height="323dp"
-        app:srcCompat="@drawable/icons_plant" />
+        app:srcCompat="@drawable/foto_1"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"/>
 
 
     <LinearLayout
@@ -20,20 +22,18 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnCancelar"
+            android:id="@+id/btnCancelarFoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancelar"
-            android:onClick="cerrarModalTomaFoto"/>
+            android:text="Cancelar"/>
 
         <Button
-            android:id="@+id/btnAceptar"
+            android:id="@+id/btnAceptarFoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Aceptar"
-            android:onClick="aceptarTomaFotoModal"/>
+            android:text="Aceptar"/>
     </LinearLayout>
 
 </LinearLayout>
