Autocorrector, inicial mayusculas y URL Api

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,7 +158,8 @@
                 android:id="@+id/textoConsejo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Consejo" />
+                android:hint="Consejo"
+                android:inputType="textAutoCorrect|textCapSentences"/>
         </com.google.android.material.textfield.TextInputLayout>
 
 
