--- a/app/src/main/res/layout/dlg_sintoma.xml
+++ b/app/src/main/res/layout/dlg_sintoma.xml
@@ -16,7 +16,8 @@
             android:id="@+id/textSintoma"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Ingrese síntoma"/>
+            android:hint="Ingrese síntoma"
+            android:inputType="textAutoCorrect|textCapSentences"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -27,7 +28,8 @@
             android:id="@+id/textDescripcionSintoma"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Descripción" />
+            android:hint="Descripción"
+            android:inputType="textAutoCorrect|textCapSentences"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
